--- a/.github/workflows/release-latest.yml
+++ b/.github/workflows/release-latest.yml
@@ -34,7 +34,7 @@ jobs:
           sed -e '/^[[:space:]]*$/d' -e '/[#@]/d' -e 's/\"//g' -e 's/\(^[^=]*\)=\(.*\)/\1="\2"/' template.env > env.hcl
           echo "COMMIT_HASH=`echo '${{ github.sha }}' | cut -c 1-7`" >> "$GITHUB_ENV"
           OWNER=$(echo "$GITHUB_REPOSITORY_OWNER" | tr '[:upper:]' '[:lower:]')
-          echo "NAMESPACE=ghcr.io/${OWNER}/misp-docker" >> "$GITHUB_ENV"
+          echo "NAMESPACE=ghcr.io/${OWNER}/misp-openshift" >> "$GITHUB_ENV"
 
       - name: Log in to the container registry
         uses: docker/login-action@v3
