--- a/core/files/etc/supervisor/supervisord.conf
+++ b/core/files/etc/supervisor/supervisord.conf
@@ -1,16 +1,16 @@
 ; supervisor config file
 
 [unix_http_server]
-file=/var/run/supervisor.sock   ; (the path to the socket file)
+file=/tmp/supervisor.sock   ; (the path to the socket file)
 chmod=0700                       ; sockef file mode (default 0700)
 nodaemon=true
 username=%(ENV_SUPERVISOR_USERNAME)s
 password=%(ENV_SUPERVISOR_PASSWORD)s
 
 [supervisord]
-logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
-pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
-childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
+logfile=/tmp/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
+pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
+childlogdir=/tmp/supervisor            ; ('AUTO' child log dir, default $TEMP)
 nodaemon=true
 
 ; the below section must remain in the config file for RPC
@@ -20,7 +20,7 @@ nodaemon=true
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
+serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 username=%(ENV_SUPERVISOR_USERNAME)s
 password=%(ENV_SUPERVISOR_PASSWORD)s
 
