--- a/core/files/etc/supervisor/supervisord.conf
+++ b/core/files/etc/supervisor/supervisord.conf
@@ -10,7 +10,7 @@ password=%(ENV_SUPERVISOR_PASSWORD)s
 [supervisord]
 logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
 pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
-childlogdir=/tmp/supervisor            ; ('AUTO' child log dir, default $TEMP)
+childlogdir=/tmp            ; ('AUTO' child log dir, default $TEMP)
 nodaemon=true
 
 ; the below section must remain in the config file for RPC
